--- a/test.ipynb
+++ b/test.ipynb
@@ -27,6 +27,207 @@
    "source": [
     "print(\"The result of the exam is: \", resul)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "66fe8883",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "floor_devition 2\n",
+      "modular_divition 3\n",
+      "Expomentioal 410338673\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = 17\n",
+    "b = 7\n",
+    "\n",
+    "floor_devition = a // b\n",
+    "modular_divition = a % b\n",
+    "exponentioal = a ** b\n",
+    "\n",
+    "print(\"floor_devition\", floor_devition)\n",
+    "print(\"modular_divition\", modular_divition)\n",
+    "print(\"Expomentioal\", exponentioal)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "34d81b11",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Floor <class 'int'>, \n",
+      "Modular <class 'int'>, \n",
+      "Exponential <class 'int'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f\"Floor {type(floor_devition)}, \\nModular {type(modular_divition)}, \\nExponential {type(exponentioal)}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "97a63ec6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a == b"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "722437e5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a != b"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "5ab15b44",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a > b"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "2314e7d4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a >= b"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "3e85def6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "X = True\n",
+    "Y = True\n",
+    "\n",
+    "print(X and Y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "28ed8589",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "e = True\n",
+    "f = False\n",
+    "g = True\n",
+    "h = False\n",
+    "\n",
+    "print(e or f)\n",
+    "print(f or h)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "be7d9371",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n",
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "# inverse operation\n",
+    "\n",
+    "print(not e)\n",
+    "print(not f)"
+   ]
   }
  ],
  "metadata": {
