--- a/Python/3-Loops/testloop.ipynb
+++ b/Python/3-Loops/testloop.ipynb
@@ -318,6 +318,84 @@
     "        continue # skip the current item and continiue with the next item\n",
     "    print(i)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "b2a0ab10",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "3\n",
+      "5\n",
+      "7\n",
+      "9\n"
+     ]
+    }
+   ],
+   "source": [
+    "# print only odd numbers\n",
+    "for i in range(10):\n",
+    "    if i%2 == 0:\n",
+    "        continue\n",
+    "    print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "4841b9b8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "i: 0, j: 0\n",
+      "i: 0, j: 1\n",
+      "i: 1, j: 0\n",
+      "i: 1, j: 1\n",
+      "i: 2, j: 0\n",
+      "i: 2, j: 1\n"
+     ]
+    }
+   ],
+   "source": [
+    "# nested loops\n",
+    "for i in range(3):\n",
+    "    for j in range(2):\n",
+    "        print(f\"i: {i}, j: {j}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "a2b48828",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "55\n"
+     ]
+    }
+   ],
+   "source": [
+    "n = 10\n",
+    "sum = 0\n",
+    "count = 1\n",
+    "\n",
+    "while count <=n:\n",
+    "    sum = sum + count\n",
+    "    count = count + 1\n",
+    "\n",
+    "print(sum)"
+   ]
   }
  ],
  "metadata": {
