--- a/Python/3-Loops/testloop.ipynb
+++ b/Python/3-Loops/testloop.ipynb
@@ -373,7 +373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "id": "a2b48828",
    "metadata": {},
    "outputs": [
@@ -394,6 +394,28 @@
     "    sum = sum + count\n",
     "    count = count + 1\n",
     "\n",
+    "print(sum)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "535fc2cd",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "66\n"
+     ]
+    }
+   ],
+   "source": [
+    "sum = 0\n",
+    "\n",
+    "for i in range(12):\n",
+    "    sum = sum + i\n",
     "print(sum)"
    ]
   }
