--- a/Python/3-Loops/testloop.ipynb
+++ b/Python/3-Loops/testloop.ipynb
@@ -418,6 +418,24 @@
     "    sum = sum + i\n",
     "print(sum)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "29348e3a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# prime numbers 1 and 100\n",
+    "\n",
+    "for num in range(1, 101):\n",
+    "    if num > 1:\n",
+    "        for i in range(2, num):\n",
+    "            if num % i == 0:\n",
+    "                break\n",
+    "        else:\n",
+    "            print(num)"
+   ]
   }
  ],
  "metadata": {
