--- a/assignment_question.ipynb
+++ b/assignment_question.ipynb
@@ -22,11 +22,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello, World!\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here"
+    "# Your code here\n",
+    "print(\"Hello, World!\")"
    ]
   },
   {
@@ -38,12 +47,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "the input is:  468sgrs\n"
+     ]
+    }
+   ],
    "source": [
     "# Your code here\n",
-    "user  = input(\"enter your First Name:\")"
+    "user  = input(\"enter your First Name:\")\n",
+    "print(\"the input is: \", user)"
    ]
   },
   {
@@ -55,9 +73,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number is possitive: 2\n"
+     ]
+    }
+   ],
    "source": [
     "# Your code here\n",
     "number = 2\n",
@@ -78,17 +104,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "the maximum number out of three is: 7\n"
+     ]
+    }
+   ],
    "source": [
     "# Your code here\n",
     "num = [2, 5, 7]\n",
     "max = num[0]\n",
+    "\n",
     "for i in range(len(num)):\n",
     "    if num[i] > max:\n",
     "        max = num[i]\n",
-    "print(f'The largest number is: {max}')"
+    "print(f'the maximum number out of three is: {max}')"
    ]
   },
   {
@@ -100,11 +135,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "the factorial of 5 is: 120\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here"
+    "# Your code here\n",
+    "num = 5\n",
+    "sum = 1\n",
+    "for i in range(2, num+1):\n",
+    "    sum *= i\n",
+    "print(f'the factorial of {num} is: {sum}')"
    ]
   },
   {
@@ -134,11 +182,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "after swapping: a = 20, b = 10\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here"
+    "# Your code here\n",
+    "a = 10\n",
+    "b = 20\n",
+    "\n",
+    "a, b = b, a\n",
+    "print(f'after swapping: a = {a}, b = {b}')\n"
    ]
   },
   {
@@ -354,7 +415,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "udemydata",
    "language": "python",
    "name": "python3"
   },
@@ -368,7 +429,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.11.14"
   }
  },
  "nbformat": 4,
