--- a/Python/1-PythonBasics/assignment_question.ipynb
+++ b/Python/1-PythonBasics/assignment_question.ipynb
@@ -22,20 +22,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Hello, World!\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# Your code here\n",
-    "print(\"Hello, World!\")"
+    "# Your code here"
    ]
   },
   {
@@ -47,21 +37,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "the input is:  468sgrs\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# Your code here\n",
-    "user  = input(\"enter your First Name:\")\n",
-    "print(\"the input is: \", user)"
+    "# Your code here"
    ]
   },
   {
@@ -73,26 +52,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Number is possitive: 2\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# Your code here\n",
-    "number = 2\n",
-    "if number > 0:\n",
-    "    print(f'Number is possitive: {number}')\n",
-    "elif number < 0:\n",
-    "    print(f'Number is Negetive: {number}')\n",
-    "else:\n",
-    "    print(f'Number is Zero: {number}')"
+    "# Your code here"
    ]
   },
   {
@@ -104,26 +67,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "the maximum number out of three is: 7\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# Your code here\n",
-    "num = [2, 5, 7]\n",
-    "max = num[0]\n",
-    "\n",
-    "for i in range(len(num)):\n",
-    "    if num[i] > max:\n",
-    "        max = num[i]\n",
-    "print(f'the maximum number out of three is: {max}')"
+    "# Your code here"
    ]
   },
   {
@@ -135,24 +82,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "the factorial of 5 is: 120\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# Your code here\n",
-    "num = 5\n",
-    "sum = 1\n",
-    "for i in range(2, num+1):\n",
-    "    sum *= i\n",
-    "print(f'the factorial of {num} is: {sum}')"
+    "# Your code here"
    ]
   },
   {
@@ -166,7 +99,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -182,24 +114,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "after swapping: a = 20, b = 10\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# Your code here\n",
-    "a = 10\n",
-    "b = 20\n",
-    "\n",
-    "a, b = b, a\n",
-    "print(f'after swapping: a = {a}, b = {b}')\n"
+    "# Your code here"
    ]
   },
   {
@@ -211,7 +129,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -227,7 +144,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -243,7 +159,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -261,7 +176,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -277,7 +191,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -293,7 +206,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -309,7 +221,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -325,7 +236,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -341,7 +251,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -357,7 +266,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -373,7 +281,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -389,7 +296,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -405,7 +311,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -415,7 +320,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "udemydata",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -429,7 +334,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.14"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
