--- a/Python/2-ControlFlow/assignment_solutions.ipynb
+++ b/Python/2-ControlFlow/assignment_solutions.ipynb
@@ -153,6 +153,31 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "id": "7e1acef3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "* * * * * \n",
+      "* * * * * \n",
+      "* * * * * \n",
+      "* * * * * \n",
+      "* * * * * \n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(5):\n",
+    "    for j in range(5):\n",
+    "        print(\"*\", end=\" \")\n",
+    "    print()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -170,6 +195,31 @@
     "### Assignment 8: break Statement\n",
     "\n",
     "Write a program that asks the user to input numbers until they input 0. The program should print the sum of all the input numbers."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "79b1c1a0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The total is 283\n"
+     ]
+    }
+   ],
+   "source": [
+    "total = 0\n",
+    "\n",
+    "while True:\n",
+    "    inp = int(input(\"Enter a number\"))\n",
+    "    if inp == 0:\n",
+    "        break\n",
+    "    total += inp\n",
+    "print(\"The total is\", total)"
    ]
   },
   {
@@ -194,6 +244,35 @@
     "### Assignment 9: continue Statement\n",
     "\n",
     "Write a program that prints all the numbers from 1 to 10 except 5 using a for loop and continue statement."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "0996fd69",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "6\n",
+      "7\n",
+      "8\n",
+      "9\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(10):\n",
+    "    if i == 5:\n",
+    "        continue\n",
+    "    print(i)"
    ]
   },
   {
@@ -241,9 +320,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
+   "id": "eef6e8e7",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2 is even\n",
+      "4 is even\n",
+      "6 is even\n",
+      "8 is even\n",
+      "10 is even\n",
+      "12 is even\n"
+     ]
+    }
+   ],
+   "source": [
+    "number = int(input(\"Enter a Number: \"))\n",
+    "for i in range(1, number + 1):\n",
+    "    if i % 2 == 0:\n",
+    "        print(i, \"is even\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n",
+      "4\n",
+      "6\n",
+      "8\n",
+      "10\n",
+      "12\n",
+      "14\n",
+      "16\n",
+      "18\n",
+      "20\n"
+     ]
+    }
+   ],
    "source": [
     "number = int(input(\"Enter a number: \"))\n",
     "for i in range(1, number + 1):\n",
@@ -356,7 +478,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "udemydata",
    "language": "python",
    "name": "python3"
   },
@@ -370,7 +492,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.0"
+   "version": "3.11.14"
   }
  },
  "nbformat": 4,
