--- a/Python/2-ControlFlow/assignments.ipynb
+++ b/Python/2-ControlFlow/assignments.ipynb
@@ -73,22 +73,12 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# Starting the Control Flow assignments"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "def8bcb9",
-   "metadata": {},
-   "outputs": [],
    "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "udemydata",
    "language": "python",
    "name": "python3"
   },
@@ -102,7 +92,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.11.14"
   }
  },
  "nbformat": 4,
