update control flow

--- a/Python/2-ControlFlow/assignment_solutions.ipynb
+++ b/Python/2-ControlFlow/assignment_solutions.ipynb
@@ -384,6 +384,30 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 6,
+   "id": "5e3c9f70",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The factorial of 4 is: 24\n"
+     ]
+    }
+   ],
+   "source": [
+    "number = int(input(\"enter a number: \"))\n",
+    "fact = 1\n",
+    "i = 1\n",
+    "while i <= number:\n",
+    "    fact *= i\n",
+    "    i += 1\n",
+    "print(f\"The factorial of {number} is: {fact}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -462,9 +486,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "5\n",
+      "8\n",
+      "13\n",
+      "21\n",
+      "34\n",
+      "55\n",
+      "89\n",
+      "144\n",
+      "233\n",
+      "377\n"
+     ]
+    }
+   ],
    "source": [
     "n = int(input(\"Enter the number of Fibonacci numbers to print: \"))\n",
     "a, b = 0, 1\n",
