--- a/Python/list.ipynb
+++ b/Python/list.ipynb
@@ -120,15 +120,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "b07a42b3",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['apple', 'banana', 'cherry', 'orange', 'melon', 'kiwi']\n"
+     ]
+    }
+   ],
+   "source": [
+    "fruits[4] = 'melon'\n",
+    "print(fruits)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "id": "6eefc7f5",
    "metadata": {},
    "outputs": [
@@ -136,12 +147,199 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['kiwi', 'grape', 'orange', 'cherry', 'banana', 'apple']\n"
+      "['kiwi', 'melon', 'orange', 'cherry', 'banana', 'apple']\n"
      ]
     }
    ],
    "source": [
     "print(fruits[::-1])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8ec672bc",
+   "metadata": {},
+   "source": [
+    "## Methods of Lists"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8231b587",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fruits.append('pears') # add into end of the list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "5b0adcdd",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['apple', 'banana', 'cherry', 'orange', 'melon', 'kiwi', 'pears']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(fruits)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "94ef7068",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['apple', 'coconut', 'banana', 'cherry', 'orange', 'melon', 'kiwi', 'pears']\n"
+     ]
+    }
+   ],
+   "source": [
+    "fruits.insert(1, \"coconut\") # insert into the index mentioned, others shifted and same\n",
+    "print(fruits)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "f31e4b50",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['apple', 'coconut', 'banana', 'cherry', 'melon', 'kiwi', 'pears']\n"
+     ]
+    }
+   ],
+   "source": [
+    "fruits.remove('orange')\n",
+    "print(fruits)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ced3a68d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['apple', 'coconut', 'banana', 'cherry', 'melon', 'kiwi']\n"
+     ]
+    }
+   ],
+   "source": [
+    "popedfruits = fruits.pop() # remove the last element of the list and return it\n",
+    "print(fruits)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "55850de4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n"
+     ]
+    }
+   ],
+   "source": [
+    "index = fruits.index('melon') # return the index of the element mentioned\n",
+    "print(index)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "649d4621",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "fruits.insert(4, 'apple')\n",
+    "print(fruits.count('apple'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "10d2e509",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['apple', 'coconut', 'banana', 'cherry', 'apple', 'apple', 'melon', 'kiwi']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(fruits)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "5beb737f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['coconut', 'banana', 'cherry', 'apple', 'apple', 'melon', 'kiwi']\n"
+     ]
+    }
+   ],
+   "source": [
+    "fruits.remove('apple')\n",
+    "print(fruits)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "f9d01b73",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['coconut', 'banana', 'cherry', 'apple', 'melon', 'kiwi']\n"
+     ]
+    }
+   ],
+   "source": [
+    "fruits.remove(fruits[4])\n",
+    "print(fruits)"
    ]
   }
  ],
